# ispayla_wa_bot

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-compose.yml.old  pyproject.toml  ТЗ.md
alembic/: env.py
alembic/versions/: 1ed88557dc21_add_model_region_condition.py
app/: __init__.py  bot_runner.py  config.py
app/bot/: __init__.py  runner.py
app/bot/handlers/: __init__.py  basic.py  buy.py  menu.py  profile.py  sell.py
app/bot/services/: __init__.py  forms.py  guard.py  keyboard.py  media.py  state.py
app/bot/ui/: __init__.py  buttons.py  texts.py
app/database/: __init__.py  db.py  models.py
app/database/crude/: __init__.py  add.py  car_brand.py  car_image.py  favorite.py  manager.py  moder.py  payment.py  user.py  view.py
docs/: BOT_GUIDE.md  CHECKLIST.md  CRUD_guide.md  CRUD_reference.md  CRUD_usage.md  CRUD_Запросы.md  PROJECT_OVERVIEW.md  PROJECT_TZ.md  journal.md
docs/greenapi_samples/: incoming_message_received.json  outgoing_message_received.json
docs/memory/: notes.md
scripts/: add_ads_columns.py
tests/: conftest.py  test_buy_utils.py
